解决服务管理接口无法生成swagger 文档问题
