# dto/service.go
@@ -6,9 +6,9 @@ import (
 )
 
 type ServiceListInput struct {
-	Info     string `json:"info" form:"info" comment:"关键词" example:"" validate:""`                      // 关键词
-	PageNo   int    `json:"page_no" form:"page_no" comment:"页数" example:"1" validate:"required"`        // 页数
-	PageSize int    `json:"page_size" form:"page_size" comment:"每页条数" example:"20" validate:"required"` // 每页条数
+	Info     string `json:"info" form:"info" comment:"关键词" example:"" validate:""`                      //关键词
+	PageNo   int    `json:"page_no" form:"page_no" comment:"页数" example:"1" validate:"required"`        //页数
+	PageSize int    `json:"page_size" form:"page_size" comment:"每页条数" example:"20" validate:"required"` //每页条数
 }
 
 func (param *ServiceListInput) BindValidParam(ctx *gin.Context) error {
@@ -16,14 +16,14 @@ func (param *ServiceListInput) BindValidParam(ctx *gin.Context) error {
 }
 
 type ServiceListItemOutput struct {
-	ID          int64  `json:"id" from:"id"`                     // id
-	ServiceName string `json:"service_name" from:"service_name"` // 服务名称
-	ServiceDesc string `json:"service_desc" from:"service_desc"` // 服务描述
-	LoadType    int    `json:"load_type" from:"load_type"`       // 类型
-	ServiceAddr string `json:"service_addr" from:"service_addr"` // 服务地址
-	Qps         int64  `json:"qps" from:"qps"`                   // qps
-	Qpd         int64  `json:"qpd" from:"qpd"`                   // qpd
-	TotalNode   int    `json:"total_node" from:"total_node"`     // 节点数
+	ID          int64  `json:"id" form:"id"`                     //id
+	ServiceName string `json:"service_name" form:"service_name"` //服务名称
+	ServiceDesc string `json:"service_desc" form:"service_desc"` //服务描述
+	LoadType    int    `json:"load_type" form:"load_type"`       //类型
+	ServiceAddr string `json:"service_addr" form:"service_addr"` //服务地址
+	Qps         int64  `json:"qps" form:"qps"`                   //qps
+	Qpd         int64  `json:"qpd" form:"qpd"`                   //qpd
+	TotalNode   int    `json:"total_node" form:"total_node"`     //节点数
 }
 
 type ServiceListOutput struct {
